--- a/common.css
+++ b/common.css
@@ -19,6 +19,11 @@
     transform: translateX(-50%);
 }
 
+/* 字体居中 */
+.align-center {
+    text-align: center;
+}
+
 /* 下划线 */
 .underline {
     border-bottom: 1px solid #f0f0f0;
@@ -79,7 +84,7 @@
 
 /* 隐藏 */
 .hidden {
-    display: hidden;
+    display: none;
 }
 
 /* 伪元素--前缀 */
